# BareBonesEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  todo.md
A1/: Makefile  todo.md
A1/src/: demo.cpp  main.cpp
A1/src/imgui/: imconfig.h
A2/: todo.md
A2/src/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Vec2.cpp  Vec2.h  main.cpp
A2/visualstudio/: A2.sln  A2.vcxproj  A2.vcxproj.filters  SFMLGame.vcxproj
A2/visualstudio/A2/x64/Debug/: vc143.idb
A2/visualstudio/A2/x64/Debug/A2.tlog/: A2.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
A3/: Game.cpp  Makefile  README.md  assets_backup.txt  todo.md
A3/assets/levels/: level_1.txt
A3/src/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  Components.h  ConfigManager.cpp  ConfigManager.h  Entity.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  ScenePlatformer.cpp  ScenePlatformer.h  SceneStartMenu.cpp  SceneStartMenu.h  Vec2.h  main.cpp
A3/src_copy/: assets.txt
A3/src_copy/src/: Animation.cpp  Animation.h  Assets.cpp  Entity.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.cpp  ScenePlatformer.cpp  ScenePlatformer.h
assets/: assets.txt
assets/levels/: level_forest.txt  level_mario.txt  level_platformer.txt  levels.txt
config/: config.txt  config_next.txt
include/core/: Assets.h  Components.h  EntityManager.h  GameEngine.h
include/scenes/: Scene.h  SceneLevelEditor.h  ScenePlatformer.h  SceneStartMenu.h
include/systems/: Animation.h  Physics.h
src/: Animation.cpp  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Components.h  Entity.h  EntityManager.h  GameEngine.cpp  GameEngine.h  ParallaxLayer.cpp  ParallaxLayer.h  Physics.cpp  Scene.h  ScenePlatformer.cpp  ScenePlatformer.h  SceneStartMenu.cpp  Vec2.h  main.cpp
src/core/: Assets.cpp  Assets.h  CMakeLists.txt  Components.h  ConfigManager.cpp  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: Assets.cpp  Assets.h  ConfigManager.cpp  ConfigManager.h  GameEngine.cpp  GameEngine.h  Vec2.h
src/engine/entity/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/engine/scene/: Scene.cpp  Scene.h
src/engine/systems/: Action.cpp  Action.h  Animation.cpp  Animation.h  AnimationUtils.h  Physics.cpp  Physics.h  RenderUtils.h
src/entities/: CMakeLists.txt  Entity.cpp
src/entity/: Entity.h
src/game/: CMakeLists.txt  SceneLevelEditor.cpp  SceneLevelEditor.h  ScenePlatformer.cpp  ScenePlatformer.h  SceneStartMenu.cpp  SceneStartMenu.h  main.cpp
src/scenes/: CMakeLists.txt  Scene.cpp  Scene.h  SceneLevelEditor.cpp  SceneLevelEditor.h  ScenePlatformer.cpp  ScenePlatformer.h  SceneStartMenu.cpp  SceneStartMenu.h
src/systems/: Action.cpp  Action.h  Animation.cpp  Animation.h  CMakeLists.txt  Physics.cpp  Physics.h
src/ui/imgui/: CMakeLists.txt  imgui-SFML.cpp
src/utils/: Array.h  Vec2.h
